--- a/exploration-notebooks/WDPA_point_dataprocessing.ipynb
+++ b/exploration-notebooks/WDPA_point_dataprocessing.ipynb
@@ -526,6 +526,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "wdpa_points = wdpa_points.to_crs('epsg:4087')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
    "outputs": [],
@@ -864,7 +873,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -885,7 +894,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -908,7 +917,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1247,7 +1256,7 @@
        "[3700 rows x 16 columns]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1261,12 +1270,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#proposed_dams['geometry'] = proposed_dams.buffer(100 * 1000)"
+    "# 50 km buffer\n",
+    "proposed_dams['geometry'] = proposed_dams.buffer(50 * 1000)\n",
+    "\n",
+    "data_intersect_50 = gpd.overlay(wdpa_points, proposed_dams, how='intersection')\n",
+    "wdpa_buffer_50 = ((data_intersect_50.area.sum())/1000000).round(1)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.0"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "wdpa_buffer_50"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
