--- a/Blog_Draft.ipynb
+++ b/Blog_Draft.ipynb
@@ -4,6 +4,35 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "picking one key finding of your project that you want to explain or demonstrate (i.e. you do not have to include everything that you did as part of your project)\n",
+    "choosing your title and visualizations based on those that help explain/demonstrate the key finding\n",
+    "describing how you completed the project in plain/layperson language (i.e. you can tell your readers how to find your code and more details about your project on GitHub)\n",
+    "Your blog post should:\n",
+    "\n",
+    "have a concise, catchy title that stands alone (i.e. if I read nothing else, I could still know the main point of the blog post)\n",
+    "contain at least two key visualizations created/imported via code (e.g. plots, images) that support your story\n",
+    "plots should have titles, axes labels, and captions (either in the plot or as Markdown)\n",
+    "additional images that are not created via code are also allowed (but be sure to include them in your upload to CANVAS)\n",
+    "do not include any visualizations or outputs that you will not explain in your text\n",
+    "contain between 500-700 words total\n",
+    "include subtitles for each section using Markdown\n",
+    "at least 3 paragraphs of no more than 200 words each (i.e. make this blog readable and visually attractive through organization of words and visualizations - break up text with images)\n",
+    "subsections should cover the following:\n",
+    "what did you find? (begin with 1-2 clear statements about the main finding/point you want to share in this post)\n",
+    "why does it matter? (significance to general audience - why should they care about the finding?)\n",
+    "how did you find this out? (very brief explanation in plain/layperson terms)\n",
+    "final discussion (i.e. other implications or potential applications of findings, future work)\n",
+    "how can the reader find out more? (include link to GitHub repository)\n",
+    "hide code cells in Jupyter Notebook by adding the word \"hide\" to the tag window for the cell \n",
+    "open the tag window using View > Cell Toolbar > Tags \n",
+    "Note: this action only hides the cell upon publication on the website; you will still be able to see the code cell in Jupyter Notebook\n",
+    "cite any references that are included in your text"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# A Big Dam Problem:\n",
     "## Identifying critical landscapes around the globe that will be affected by future dam construction.\n",
     "Contributors: Lauren Herwehe, University of Colorado, Boulder and Stephanie L. Shepherd, Auburn University"
@@ -132,7 +161,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.3"
   },
   "toc": {
    "base_numbering": 1,
