--- a/exploration-notebooks/FFR_WDPA_Ramsar_Global_processing.ipynb
+++ b/exploration-notebooks/FFR_WDPA_Ramsar_Global_processing.ipynb
@@ -68,16 +68,16 @@
    ],
    "source": [
     "# Download data stored on figshare\n",
-    "# Free flowing rivers dataset\n",
-    "et.data.get_data(url=\"https://ndownloader.figshare.com/files/7688801\")\n",
+    "# NOTE: FFR data, WDPA data, country borders, and ISO csv were downloaded directly to the hub\n",
     "\n",
-    "# Future dams\n",
-    "et.data.get_data(url=\"https://ndownloader.figshare.com/files/22486157\")\n",
-    "\n",
-    "# Ramsar Sites\n",
+    "# Ramsar sites\n",
     "et.data.get_data(url=\"https://ndownloader.figshare.com/files/22507082\")\n",
     "\n",
-    "# NOTE THAT WDPA AND CONTINENT BORDERS WERE DIRECTLY DOWNLOADED TO THE HUB"
+    "# # Free flowing rivers dataset\n",
+    "# et.data.get_data(url=\"https://ndownloader.figshare.com/files/15090536\")\n",
+    "\n",
+    "# # WDPA data by continent\n",
+    "# et.data.get_data(url=\"https://ndownloader.figshare.com/articles/12547871/versions/1\")"
    ]
   },
   {
@@ -95,50 +95,52 @@
     }
    ],
    "source": [
-    "# Open the shapefiles with geopandas\n",
-    "wdpa_africa_polys = gpd.read_file(os.path.join(wd_path,\n",
-    "                                               \"earthpy-downloads\", \"WDPA_Africa\", \"WDPA_Africa.shp\"))\n",
-    "\n",
-    "ffr_0to5 = gpd.read_file(os.path.join(wd_path,\n",
-    "                                      \"earthpy-downloads\", \"FFR_DOR_shapefiles\", \"FFR_DOR_0to5.shp\"))\n",
-    "\n",
-    "ffr_5to10 = gpd.read_file(os.path.join(wd_path,\n",
-    "                                       \"earthpy-downloads\", \"FFR_DOR_shapefiles\", \"FFR_DOR_5to10.shp\"))\n",
-    "\n",
-    "ffr_10to20 = gpd.read_file(os.path.join(wd_path,\n",
-    "                                        \"earthpy-downloads\", \"FFR_DOR_shapefiles\", \"FFR_DOR_10to20.shp\"))\n",
-    "\n",
-    "ffr_20plus = gpd.read_file(os.path.join(wd_path,\n",
-    "                                        \"earthpy-downloads\", \"FFR_DOR_shapefiles\", \"FFR_DOR_20plus.shp\"))\n",
-    "\n",
+    "# Open the necessary data with geopandas\n",
+    "# Ramsar Polys\n",
     "ramsar_polys = gpd.read_file(os.path.join(\n",
     "    \"earthpy-downloads\", \"ramsar-site-data\", \"ramsar-boundaries\",\n",
     "    \"features_publishedPolygon.shp\"))\n",
     "\n",
+    "# Country borders & ISOs\n",
     "country_borders = gpd.read_file(os.path.join(wd_path, \"earthpy-downloads\", \"country-borders\",\n",
-    "                                             \"99bfd9e7-bb42-4728-87b5-07f8c8ac631c2020328-1-1vef4ev.lu5nk.shp\"))\n",
-    "\n",
-    "africa_borders = gpd.read_file(os.path.join(wd_path, \"earthpy-downloads\", \"continent-borders\",\n",
-    "                                            \"Africa.shp\"))\n",
-    "\n",
-    "# Open the dams csv files with pandas\n",
-    "dams_source_path = os.path.join(\"earthpy-downloads\", \"future_dams_2015.csv\")\n",
-    "dams_df = pd.read_csv(dams_source_path)\n",
-    "\n",
-    "# Covert the pandas dataframe to a shapefile for plotting and set output path\n",
-    "dams_path = os.path.join('fhred-proposed-dams')\n",
-    "if not os.path.exists(dams_path):\n",
-    "    os.mkdir(dams_path)\n",
-    "\n",
-    "# Define the geometry for the dam points\n",
-    "geometry = [Point(xy) for xy in zip(dams_df.Lon_Cleaned, dams_df.LAT_cleaned)]\n",
-    "crs = {'init': 'epsg:4087'}\n",
-    "geo_df = gdf(dams_df, crs=crs, geometry=geometry)\n",
-    "geo_df.to_file(driver='ESRI Shapefile', filename=os.path.join(\n",
-    "    dams_path, 'proposed_dams.shp'))\n",
-    "\n",
-    "# Open the proposed dams shapefile with geopandas\n",
-    "proposed_dams = gpd.read_file(os.path.join(dams_path, \"proposed_dams.shp\"))"
+    "                                             \"country-borders.shp\"))\n",
+    "continent_iso = pd.read_csv(os.path.join(wd_path, \"earthpy-downloads\", \"continent-borders\",\n",
+    "                                            \"continent-country.csv\"))\n",
+    "# WDPA polygons\n",
+    "wdpa_africa_polys = gpd.read_file(os.path.join(wd_path,\n",
+    "                                               \"earthpy-downloads\", \"WDPA_Africa\", \"WDPA_Africa.shp\"))\n",
+    "wdpa_na_polys = gpd.read_file(os.path.join(wd_path,\n",
+    "                                           \"earthpy-downloads\", \"WDPA_N_America\", \"WDPA_N_America.shp\"))\n",
+    "wdpa_sa_polys = gpd.read_file(os.path.join(wd_path,\n",
+    "                                           \"earthpy-downloads\", \"WDPA_S_America\", \"WDPA_S_America.shp\"))\n",
+    "wdpa_europe_polys = gpd.read_file(os.path.join(wd_path,\n",
+    "                                               \"earthpy-downloads\", \"WDPA_Europe\", \"WDPA_Europe.shp\"))\n",
+    "wdpa_asia_polys = gpd.read_file(os.path.join(wd_path,\n",
+    "                                             \"earthpy-downloads\", \"WDPA_Asia\", \"WDPA_Asia.shp\"))\n",
+    "wdpa_aus_polys = gpd.read_file(os.path.join(wd_path,\n",
+    "                                            \"earthpy-downloads\", \"WDPA_Australia\", \"WDPA_Australia.shp\"))\n",
+    "# Current DOR shapefiles\n",
+    "dor_0to5 = gpd.read_file(os.path.join(wd_path,\n",
+    "                                      \"earthpy-downloads\", \"DOR_Binned\", \"DOR_0to5.shp\"))\n",
+    "dor_5to10 = gpd.read_file(os.path.join(wd_path,\n",
+    "                                       \"earthpy-downloads\", \"DOR_Binned\", \"DOR_5to10.shp\"))\n",
+    "dor_10to15 = gpd.read_file(os.path.join(wd_path,\n",
+    "                                        \"earthpy-downloads\", \"DOR_Binned\", \"DOR_10to15.shp\"))\n",
+    "dor_15to20 = gpd.read_file(os.path.join(wd_path,\n",
+    "                                        \"earthpy-downloads\", \"DOR_Binned\", \"DOR_15to20.shp\"))\n",
+    "dor_over20 = gpd.read_file(os.path.join(wd_path,\n",
+    "                                        \"earthpy-downloads\", \"DOR_Binned\", \"DOR_over20.shp\"))\n",
+    "# Planned DOR shapefiles\n",
+    "dor_pla_0to5 = gpd.read_file(os.path.join(wd_path,\n",
+    "                                      \"earthpy-downloads\", \"DOR_PLA_Binned\", \"DOR_PLA_0to5.shp\"))\n",
+    "dor_pla_5to10 = gpd.read_file(os.path.join(wd_path,\n",
+    "                                       \"earthpy-downloads\", \"DOR_PLA_Binned\", \"DOR_PLA_5to10.shp\"))\n",
+    "dor_pla_10to15 = gpd.read_file(os.path.join(wd_path,\n",
+    "                                        \"earthpy-downloads\", \"DOR_PLA_Binned\", \"DOR_PLA_10to15.shp\"))\n",
+    "dor_pla_15to20 = gpd.read_file(os.path.join(wd_path,\n",
+    "                                        \"earthpy-downloads\", \"DOR_PLA_Binned\", \"DOR_PLA_15to20.shp\"))\n",
+    "dor_pla_over20 = gpd.read_file(os.path.join(wd_path,\n",
+    "                                        \"earthpy-downloads\", \"DOR_PLA_Binned\", \"DOR_PLA_over20.shp\"))"
    ]
   },
   {
