--- a/exploration-notebooks/FFR_WDPA_Ramsar_Global_processing2.ipynb
+++ b/exploration-notebooks/FFR_WDPA_Ramsar_Global_processing2.ipynb
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -261,19 +261,9 @@
    "source": [
     "# Pull only the ramsar areas for each continent\n",
     "ramsar_polys_africa = ramsar_polys[ramsar_polys['iso3'].isin(continent_iso[region == Africa])]\n",
-    "ramsar_polys_na = ramsar_polys[ramsar_polys['iso3'].isin(continent_iso[sub-region == North America])]\n",
-    "ramsar_polys_sa = ramsar_polys[ramsar_polys['iso3'].isin(continent_iso[sub-region == South America])]\n",
-    "ramsar_polys_europe = ramsar_polys[ramsar_polys['iso3'].isin(continent_iso[region == Europe])]\n",
-    "ramsar_polys_asia = ramsar_polys[ramsar_polys['iso3'].isin(continent_iso[region == Asia])]\n",
-    "ramsar_polys_aus = ramsar_polys[ramsar_polys['iso3'].isin(continent_iso[region == Oceania])]\n",
     "\n",
     "# Merge ramsar and WDPA datasets by continent\n",
-    "wdpa_ramsar_africa = pd.concat(wdpa_polys_africa, ramsar_polys_africa)\n",
-    "wdpa_ramsar_na = pd.concat(wdpa_polys_na, ramsar_polys_na)\n",
-    "wdpa_ramsar_sa = pd.concat(wdpa_polys_sa, ramsar_polys_sa)\n",
-    "wdpa_ramsar_euro = pd.concat(wdpa_polys_europe, ramsar_polys_europe)\n",
-    "wdpa_ramsar_as = pd.concat(wdpa_polys_asia, ramsar_polys_asia)\n",
-    "wdpa_ramsar_aus = pd.concat(wdpa_polys_aus, ramsar_polys_aus)"
+    "wdpa_ramsar_africa = pd.concat(wdpa_polys_africa, ramsar_polys_africa)"
    ]
   },
   {
@@ -417,27 +407,6 @@
     "          loc=('lower right'),\n",
     "          title=\"LEGEND\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
