--- a/exploration-notebooks/dam-impacts-on-protected-areas-visualization.ipynb
+++ b/exploration-notebooks/dam-impacts-on-protected-areas-visualization.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This notebook creates three example maps for Burkina Faso, with all rivers stratified by Degree of Regulation, (1) all current rivers and protected areas, (2) all current rivers that overlap protected areas, and (4) all projected future rivers that overlap protected areas. It also provides (4) all current rivers and protected areas in all Africa by Degree of Regulation."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
