--- a/presentations/Project_Summary.ipynb
+++ b/presentations/Project_Summary.ipynb
@@ -73,8 +73,14 @@
    "metadata": {},
    "source": [
     "### Methods\n",
+    "(can we link to the notebooks that actually do the data crunching?)\n",
+    "^^ I think we just link to the git repository\n",
     "\n",
-    "(can we link to the notebooks that actually do the data crunching?)"
+    "GitHub Repository: https://github.com/stephlshep/global-dam-impacts.git\n",
+    "\n",
+    "* exploration-notebooks/dam-impacts-on-protected-areas-calc.ipynb: A JupyterNotebook that (1) contains functions that combine World Database of Protected Areas and Ramsar Data for a country or continent to create a full protected areas dataset for the desired region and (2) calculates the total length of rivers on protected lands and total area of protected lands that are affected by proposed dams by country for a desired continent. \n",
+    "* exploration-notebooks/dam-impacts-on-protected-areas-visualization.ipynb: A JupyterNotebook that creates three example maps for Burkina Faso, with all rivers stratified by Degree of Regulation, (1) all current rivers and protected areas, (2) all current rivers that overlap protected areas, and (4) all projected future rivers that overlap protected areas. It also provides (4) all current rivers and protected areas in all Africa by Degree of Regulation.\n",
+    "* exploration-notebooks/explore-proposed-dams-and-ramsar-areas.ipynb A JupyterNotebook exploring the data for a preliminary analysis of FHReD and Ramsar Site data. Use this notebook to better understand proposed dams globally and how they overlap Ramsar protected areas."
    ]
   },
   {
