--- a/exploration-notebooks/dam-impacts-on-protected-areas-calc-africa.ipynb
+++ b/exploration-notebooks/dam-impacts-on-protected-areas-calc-africa.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "## Africa\n",
-    "This notebook contains functions that combine World Database of Protected Areas and Ramsar data for a country or continent to create a full protected areas dataset for the desired region and calculates the total length of rivers on protected lands and total area of protected lands that are affected by proposed dams by country for a desired continent. Below you will find the code to analyze Asia, Africa, and South America, you simply need to uncomment your selected continent and comment out deselected continents (running all three continents at once will likely crash your notebook!)."
+    "This notebook contains functions that combine World Database of Protected Areas and Ramsar data for a country or continent to create a full protected areas dataset for the desired region and calculates the total length of rivers on protected lands and total area of protected lands that are affected by proposed dams by country for a desired continent. Below you will find the code to analyze Africa."
    ]
   },
   {
@@ -603,7 +603,7 @@
     "sns.set(font_scale=1.5, style='whitegrid')\n",
     "\n",
     "fig, ax = plt.subplots(figsize=(15, 10))\n",
-    "ax.plot(africa_affected[\"Country\"],\n",
+    "ax.bar(africa_affected[\"Country\"],\n",
     "        africa_affected[\"Affected_KM\"], marker='o', color='blue', label=\"River Length\")\n",
     "plt.legend(loc=\"upper left\")\n",
     "ax.set(title=\"Potential Protected Areas impacted by Future Dam Construction\\nAfrica\",\n",
@@ -647,7 +647,7 @@
     "sns.set(font_scale=1.5, style='whitegrid')\n",
     "\n",
     "fig, ax = plt.subplots(figsize=(15, 10))\n",
-    "ax.plot(africa_affected[\"Country\"],\n",
+    "ax.bar(africa_affected[\"Country\"],\n",
     "        africa_affected[\"Affected_Area\"], marker='o', color='orange', label=\"Land Area\")\n",
     "plt.legend(loc=\"upper left\")\n",
     "ax.set(title=\"Potential Protected Areas impacted by Future Dam Construction\\nAfrica\",\n",
