--- a/exploration-notebooks/dam-impacts-on-protected-areas-calc-asia.ipynb
+++ b/exploration-notebooks/dam-impacts-on-protected-areas-calc-asia.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "## Asia\n",
-    "This notebook contains functions that combine World Database of Protected Areas and Ramsar data for a country or continent to create a full protected areas dataset for the desired region and calculates the total length of rivers on protected lands and total area of protected lands that are affected by proposed dams by country for a desired continent. B"
+    "This notebook contains functions that combine World Database of Protected Areas and Ramsar data for a country or continent to create a full protected areas dataset for the desired region and calculates the total length of rivers on protected lands and total area of protected lands that are affected by proposed dams by country for a desired continent."
    ]
   },
   {
@@ -614,8 +614,8 @@
     "sns.set(font_scale=1.5, style='whitegrid')\n",
     "\n",
     "fig, ax = plt.subplots(figsize=(15, 10))\n",
-    "ax.plot(asia_affected[\"Country\"],\n",
-    "        asia_affected[\"Affected_KM\"], marker='o', color='blue', label=\"River Length\")\n",
+    "ax.bar(asia_affected[\"Country\"],\n",
+    "        asia_affected[\"Affected_KM\"], color='blue', label=\"River Length\")\n",
     "plt.legend(loc=\"upper left\")\n",
     "ax.set(title=\"Potential Protected Areas impacted by Future Dam Construction\\nAsia\",\n",
     "       xlabel=\"Country\", ylabel=\"Kilometers\")\n",
@@ -658,8 +658,8 @@
     "sns.set(font_scale=1.5, style='whitegrid')\n",
     "\n",
     "fig, ax = plt.subplots(figsize=(15, 10))\n",
-    "ax.plot(asia_affected[\"Country\"],\n",
-    "        asia_affected[\"Affected_Area\"], marker='o', color='orange', label=\"Land Area\")\n",
+    "ax.bar(asia_affected[\"Country\"],\n",
+    "        asia_affected[\"Affected_Area\"], color='orange', label=\"Land Area\")\n",
     "plt.legend(loc=\"upper left\")\n",
     "ax.set(title=\"Potential Protected Areas impacted by Future Dam Construction\\nAsia\",\n",
     "       xlabel=\"Country\", ylabel=\"Square Meters\")\n",
