--- a/presentations/Project_Summary.ipynb
+++ b/presentations/Project_Summary.ipynb
@@ -5,17 +5,9 @@
    "metadata": {},
    "source": [
     "### Project Summary: A Big Dam Deal\n",
-    "(include subtitle here, maybe in italtics)\n",
-    "Lauren Herwehe, EarthLab, University of Colorado \n",
+    "#### Identifying critical landscapes around the globe that will be affected by future dam construction.\n",
+    "Lauren Herwehe, Earth Lab, University of Colorado \n",
     "Stephanie L. Shepherd, Geosciences, Auburn University"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Goals\n",
-    "This project aims to understand how proposed dams could affect protected areas globally by (1) analyzing proposed dams by continent, (2) providing functions that combine protected areas datasets to create full datasets of protected areas by region, (3) calculating the difference between current and future degree of regulation for global rivers that overlap protected areas, (4) calculating the total length of rivers on protected lands and total area of protected lands that are affected by proposed dams by country, and (5) creating data visualizations of rivers by degree of regulation paired with protected areas."
    ]
   },
   {
@@ -32,40 +24,53 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Goals\n",
+    "This project aims to understand how proposed dams could affect protected areas around the globe. To do accomplish this goal we: \n",
+    "* Analyze proposed dams by continent, \n",
+    "* Combine Ramsar and World Database of Protected Areas datasets to create full datasets of protected areas, \n",
+    "* Calculate the total length of rivers on protected lands affected by proposed dams by country.\n",
+    "* Calculate the total area of protected lands affected by proposed dams by country. \n",
+    "* Create data visualizations of rivers by degree of regulation paired with protected areas."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Datasets\n",
     "#### Figshare Site\n",
     "To maximize reproducibility, all of the data used for this project is stored on Figshare. This means that you do not need to download any data prior to running the notebook, the JupyterNotbook script will download the data.\n",
     "\n",
-    "* Free flowing rivers current Degree of Regulation\n",
-    "    * url=\"https://ndownloader.figshare.com/files/23273213\"\n",
-    "* Free flowing rivers future Degree of Regulation\n",
-    "    * url=\"https://ndownloader.figshare.com/files/23273216\"\n",
-    "* World Database of Protected Areas - split by continent\n",
-    "    * url=\"https://ndownloader.figshare.com/files/23354894\"\n",
-    "* Ramsar Sites\n",
-    "    * url=\"https://ndownloader.figshare.com/files/22507082\"\n",
-    "* Future Hydropower Reservoirs and Dams (FHReD)\n",
-    "    * url=\"https://ndownloader.figshare.com/files/22486157\"\n",
     "* Country Boundaries\n",
     "    * url=\"https://ndownloader.figshare.com/files/22507058\"\n",
     "* Continent boundaries\n",
     "    * url=\"https://ndownloader.figshare.com/files/23392280\"\n",
-    "* Country ISO3 codes & Continents\n",
+    "* Country ISO3 Codes & Continents\n",
     "    * url=\"https://ndownloader.figshare.com/files/23393756\"\n",
+    "* Free flowing rivers current Degree of Regulation\n",
+    "    * url=\"https://ndownloader.figshare.com/files/23273213\"\n",
+    "* Free flowing rivers future Degree of Regulation\n",
+    "    * url=\"https://ndownloader.figshare.com/files/23273216\"\n",
+    "* Future Hydropower Reservoirs and Dams (FHReD)\n",
+    "    * url=\"https://ndownloader.figshare.com/files/22486157\"\n",
+    "* Ramsar Sites\n",
+    "    * url=\"https://ndownloader.figshare.com/files/22507082\"\n",
+    "* World Database of Protected Areas - split by continent\n",
+    "    * url=\"https://ndownloader.figshare.com/files/23354894\"\n",
     "    \n",
     "#### Original Data\n",
     "* Free Flowing Rivers Current & Future - https://www.nature.com/articles/s41586-019-1111-9\n",
-    "    * This dataset contains a shapefile with all rivers from around the world and their current and projected degree of regulation.\n",
-    "* World Database of Protected Areas (WDPA) - https://www.protectedplanet.net/\n",
-    "    * This dataset contains a shapefile with protected areas from around the world.\n",
+    "    * This dataset contains a shapefile with all rivers from around the world and their current and projected degree of regulation due to proposed dams.\n",
+    "* Future Hydropower Reservoirs and Dams (FHReD) - http://globaldamwatch.org/fhred/\n",
+    "    * Geographic database of dams > 1MW that are planned or underconstruction.\n",
     "* GlObal geOreferenced Database of Dams (GOODD) - http://globaldamwatch.org/goodd/\n",
     "    * This dataset contains the geographic locations of dams identified from Google Earth's satellite data. \n",
     "* Global Reservoir and Dam Database (GRand) - http://globaldamwatch.org/grand/\n",
-    "    * This database collates record for dams and river around the globe form multiple sources.  The data set is curated by McGill University, Canada.\n",
-    "* Future Hydropower Reservoirs and Dams (FHReD) - http://globaldamwatch.org/fhred/\n",
-    "    * Geographic database of dams > 1MW that are planned or underconstruction.\n",
+    "    * This database collates record for dams and river around the globe form multiple sources. The data set is curated by McGill University, Canada.\n",
     "* Ramsar Site Database - https://rsis.ramsar.org/)\n",
-    "    * This database contains a shapefile of wetland areas of critical importance as identified under the Convention on Wetlands (1971)."
+    "    * This database contains a shapefile of wetland areas of critical importance as identified under the Convention on Wetlands (1971).\n",
+    "* World Database of Protected Areas (WDPA) - https://www.protectedplanet.net/\n",
+    "    * This dataset contains a shapefile with protected areas from around the world."
    ]
   },
   {
@@ -73,9 +78,8 @@
    "metadata": {},
    "source": [
     "### Methods\n",
-    "(can we link to the notebooks that actually do the data crunching?)\n",
-    "^^ I think we just link to the git repository\n",
     "\n",
+    "In order\n",
     "GitHub Repository: https://github.com/stephlshep/global-dam-impacts.git\n",
     "\n",
     "* exploration-notebooks/dam-impacts-on-protected-areas-calc.ipynb: A JupyterNotebook that (1) contains functions that combine World Database of Protected Areas and Ramsar Data for a country or continent to create a full protected areas dataset for the desired region and (2) calculates the total length of rivers on protected lands and total area of protected lands that are affected by proposed dams by country for a desired continent. \n",
